fixing styling overlap

--- a/RockPaperScissors/rockpaperscissors.css
+++ b/RockPaperScissors/rockpaperscissors.css
@@ -4,6 +4,10 @@ html, body, p {
 
 html {
     box-sizing: border-box;
+    font-size: 62.5%;
+    font-family:'Quicksand', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 body {
